@@ -1,3 +1,6 @@
+    - Add $job->declined method for workers to be able to decline handling
+      a job at this time.
+
 1.08 ()
     - Added $client->grab_and_work_on($handle) to securely work on a job 
       you know the handle of. Yann Kerherve (yannk@cpan.org) 
